--- a/style.css
+++ b/style.css
@@ -7,13 +7,12 @@ body {
   width: 150px;
 }
 
-/* Clear floats after the columns */
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
 .generate {
   width: 400px;
   text-align: center;
+}
+
+footer {
+	font-style: italic;
+	font-variant: small-caps;
 }
