--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
 }
 
 main {
+	width: 500px;
 	margin: 0 auto;
 }
 
@@ -15,17 +16,11 @@ section {
 	margin-left: 25px;
 }
 
-.row {
-	width: 500px;
-	display: flex;
-	justify-content: space-around;
-
 .column {
-	flex-grow: 1;
-	min-width: 100px;
-	max-width: 200px;
+	display: inline-block;
+	width: 150px;
 	border: 2px solid black;
-	padding: 0 0 15px 15px;
+	padding: 5px;
 	margin-bottom: 10px;
 	background-color: white;
 }
@@ -35,14 +30,15 @@ section {
 }
 
 .generate {
+	width: 450px;
 	text-align: center;
 	padding: 5px;
 }
 
 .output {
-	display: inline-flex;
-	justify-content: center;
 	width: 350px;
+	position: relative;
+	left: 45px;
 	background-color: lightgrey;
 	border: 2px solid black;
 	margin-top: 25px;
