--- a/style.css
+++ b/style.css
@@ -19,8 +19,10 @@ section {
 	width: 500px;
 	display: flex;
 	justify-content: space-around;
+}
 
 .column {
+	flex-grow: 1;
 	width: 150px;
 	border: 2px solid black;
 	padding: 0 0 15px 15px;
