solve row width style.css
line 19 width property was in fact the problem; should have been omitted with flexbox centering.

--- a/style.css
+++ b/style.css
@@ -16,13 +16,14 @@ section {
 }
 
 .row {
-	width: 500px;
 	display: flex;
 	justify-content: space-around;
 }
 
 .column {
-	width: 150px;
+	flex-grow: 1;
+	min-width: 100px;
+	max-width: 200px;
 	border: 2px solid black;
 	padding: 0 0 15px 15px;
 	margin-bottom: 10px;
