--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ section {
 
 .row {
 	display: flex;
-	justify-content: space-around;
+	justify-content: center;
 }
 
 .column {
@@ -26,7 +26,7 @@ section {
 	max-width: 200px;
 	border: 2px solid black;
 	padding: 0 0 15px 15px;
-	margin-bottom: 10px;
+	margin: 10px;
 	background-color: white;
 }
 
