Apply working flexboxes (#7)
* Revert "fix typo style.css (#5)"

This reverts commit f6476022791136988d6acb58d7452475345205e2.

* fix typo style.css

missing px
remove flex-grow for troubleshooting

* fix missing bracket style.css

22 closing .row -- this should be what caused the display error in failure to parse .column beneath

* remove flex-grow style.css

line 25 - issue of row not centering

* solve row width style.css

line 19 width property was in fact the problem; should have been omitted with flexbox centering.

* Update index.html

remove deprecated classes from columns
add linebreak after generate button

* Center flexbox style.css

switch from space-around to center to minimize awkward spread in wide screens

* add header to style.css

center header <p> as well as title
remove section style as flexbox fixed need for margin

--- a/style.css
+++ b/style.css
@@ -7,21 +7,27 @@ body {
 	padding: 10px;
 }
 
+header {
+	text-align: center;
+	margin-left: 80px;
+	margin-right: 80px;
+}
+
 main {
-	width: 500px;
 	margin: 0 auto;
 }
 
-section {
-	margin-left: 25px;
+.row {
+	display: flex;
+	justify-content: center;
 }
 
 .column {
 	display: inline-block;
 	width: 150px;
 	border: 2px solid black;
-	padding: 5px;
-	margin-bottom: 10px;
+	padding: 0 0 15px 15px;
+	margin: 10px;
 	background-color: white;
 }
 
