Flexbox centering for .generate style.css

--- a/style.css
+++ b/style.css
@@ -23,8 +23,9 @@ main {
 }
 
 .column {
-	display: inline-block;
-	width: 150px;
+	flex-grow: 1;
+	min-width: 100px;
+	max-width: 200px;
 	border: 2px solid black;
 	padding: 0 0 15px 15px;
 	margin: 10px;
@@ -36,7 +37,6 @@ main {
 }
 
 .generate {
-	width: 450px;
 	text-align: center;
 	padding: 5px;
 }
