--- a/style.css
+++ b/style.css
@@ -27,12 +27,12 @@ main {
 	min-width: 100px;
 	max-width: 200px;
 	border: 2px solid black;
-	padding: 0 0 15px 15px;
+	padding: 0 15px 15px 15px;
 	margin: 10px;
 	background-color: white;
 }
 
-.column h3{
+.column h3 {
 	text-align: center;
 }
 
@@ -42,9 +42,9 @@ main {
 }
 
 .output {
+	display: inline-flex;
+	justify-content: center;
 	width: 350px;
-	position: relative;
-	left: 45px;
 	background-color: lightgrey;
 	border: 2px solid black;
 	margin-top: 25px;
